--- a/Milestone2xUnitTest/Milestone2xUnitTest.csproj
+++ b/Milestone2xUnitTest/Milestone2xUnitTest.csproj
@@ -21,4 +21,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Milestone2\Milestone2.csproj" />
+    </ItemGroup>
+
 </Project>
