--- a/UVSimGUI/Platforms/MacCatalyst/Entitlements.plist
+++ b/UVSimGUI/Platforms/MacCatalyst/Entitlements.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
     <!-- See https://aka.ms/maui-publish-app-store#add-entitlements for more information about adding entitlements.-->
     <dict>
-        <!-- App Sandbox must be enabled to distribute a MacCatalyst app through the Mac App Store. -->
         <key>com.apple.security.app-sandbox</key>
         <true/>
-        <!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
-        <key>com.apple.security.network.client</key>
+        <key>com.apple.security.files.user-selected.read-write</key>
+        <true/>
+        <key>com.apple.security.files.downloads.read-write</key>
         <true/>
     </dict>
 </plist>
