--- a/UVSimGUI/UVSimGUI.csproj
+++ b/UVSimGUI/UVSimGUI.csproj
@@ -61,6 +61,7 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1"/>
         <PackageReference Include="Microsoft.Maui.Graphics" Version="8.0.100" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
